src/objects/Usage_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Access_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Access Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Usage Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Action__c</columns>
        <columns>Feature__c</columns>
        <columns>Page__c</columns>
        <columns>Access_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UT-{000000}</displayFormat>
        <label>Usage Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>